Fix blurry symbols: Removed will-change optimization

--- a/presentation-build/index.html
+++ b/presentation-build/index.html
@@ -55,7 +55,7 @@
             background-position: center;
             top: -70px;
             left: -70px;
-            will-change: transform, opacity, filter;
+            /* will-change: transform, opacity, filter; REMOVED */
             opacity: 0.9;
         }
 
