Update default background color to #e6e6e6

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="control-group">
             <label for="bg-color">Background</label>
-            <input type="color" id="bg-color" value="#ffffff">
+            <input type="color" id="bg-color" value="#e6e6e6">
         </div>
         <div class="hint">Press U to hide/show</div>
     </div>
