--- a/presentation-build/index.html
+++ b/presentation-build/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         :root {
-            --bg-color: #ffffff;
+            --bg-color: #e6e6e6;
             --dot-color: #000000;
             --perspective: 1000px;
             --sphere-size: 600px;
