Add density slider to V2

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
     <div id="controls-panel">
         <div class="control-group">
+            <label for="density-slider">Density (Count)</label>
+            <input type="range" id="density-slider" min="20" max="200" value="120" step="10">
+            <span id="density-value">120</span>
+        </div>
+        <div class="control-group">
             <label for="spacing-slider">Spacing (Radius)</label>
             <input type="range" id="spacing-slider" min="150" max="500" value="250" step="10">
             <span id="spacing-value">250</span>
